src/objects/Progress_Note__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <description>Activity date from Event</description>
        <inlineHelpText>Scheduled date of event</inlineHelpText>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Id_Admin__c</fullName>
        <description>Stores the ID of the activity whose note field is used as the progress note (CCM only)</description>
        <label>Appointment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Escort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisis Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empowerment and Self Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entitlements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Life and Social Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Linkage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Support Facilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judicial and Civic Accountability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal/Recidivism Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linkage To Services (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical ER Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medication Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health Treatment Linkage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Coordinator_Id__c</fullName>
        <formula>Program_Plan__r.Client_Name__r.Case_Coordinator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Coordinator Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Session_Date_Time__c</fullName>
        <label>Class Session Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <formula>Program_Plan__r.Client_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Program_Plan__r.Client_Name__r.FirstName &amp; &apos; &apos; &amp; Program_Plan__r.Client_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court_Date__c</fullName>
        <formula>Program_Plan__r.Client_Name__r.Next_Court_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Court Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Date w/ default date created. Read-only except for System Administrators</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goals_del__c</fullName>
        <description>Goals areas that the progress note pertains to</description>
        <inlineHelpText>Please select the goals this note pertains to</inlineHelpText>
        <label>APT Goals</label>
        <picklist>
            <picklistValues>
                <fullName>Substance Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avoid Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Functioning</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hashtags__c</fullName>
        <inlineHelpText>This field is for reporting only, it cannot be edited by users. It lists all of the hashtags which were included at the bottom of the note itself.</inlineHelpText>
        <label>Hashtags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident Lookup</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This client has not been involved in any Incidents.</errorMessage>
            <filterItems>
                <field>Incident_Participation__c.Program_Plan__c</field>
                <operation>equals</operation>
                <valueField>$Source.Program_Plan__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Incident_Participation__c</referenceTo>
        <relationshipLabel>Progress Notes</relationshipLabel>
        <relationshipName>Progress_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident Report</label>
        <referenceTo>Incident_Report__c</referenceTo>
        <relationshipLabel>Progress Notes</relationshipLabel>
        <relationshipName>Progress_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program_Plan__c</fullName>
        <label>Program Plan</label>
        <referenceTo>Program_Plan__c</referenceTo>
        <relationshipLabel>Progress Notes</relationshipLabel>
        <relationshipName>Progress_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Progress_Note__c</fullName>
        <label>Progress Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SRP_Import_ID__c</fullName>
        <description>Temp field for srp id for migration 9-12-16. Delete when not needed.</description>
        <label>SRP Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Progress Notes</relationshipLabel>
        <relationshipName>Progress_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Written_by__c</fullName>
        <description>Person who wrote progress note. Added because of migration</description>
        <label>Written by</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Progress Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program_Plan__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P_Note-{0000}</displayFormat>
        <label>Progress Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progress Notes</pluralLabel>
    <recordTypes>
        <fullName>CC_CRS_Note</fullName>
        <active>true</active>
        <label>CC CRS Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>CC_Progress_Note</fullName>
        <active>true</active>
        <label>CC Progress Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_Note</fullName>
        <active>true</active>
        <description>CJC/JS</description>
        <label>Case Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>Court_Rep_Note</fullName>
        <active>true</active>
        <label>Court Rep Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>Group_Note</fullName>
        <active>true</active>
        <label>Group Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incident_Report</fullName>
        <active>false</active>
        <description>CJC/JS</description>
        <label>Incident Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incident_Report_Note</fullName>
        <active>true</active>
        <description>Follow-up for all clients involved in an incident.</description>
        <label>Incident Report Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Communication</fullName>
        <active>true</active>
        <description>CJC/JS - written communications tied to participant</description>
        <label>Internal Communication</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monthly_Particpant_Report</fullName>
        <active>true</active>
        <description>CJC for montly updates to probation</description>
        <label>Monthly Particpant Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Old_Incident_Report</fullName>
        <active>false</active>
        <description>CJC/JS. Replaced by incident report record type, 5/20/13.</description>
        <label>Old Incident Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>PS_CRS_Note</fullName>
        <active>true</active>
        <label>PS CRS Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>PS_Progress_Note</fullName>
        <active>true</active>
        <label>PS Progress Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>Progress_Note_APT</fullName>
        <active>true</active>
        <description>Progress Note for APT Event Records</description>
        <label>Progress Note (APT)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Progress_Note_CCM</fullName>
        <active>true</active>
        <label>Progress Note (CCM)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Progress_Note_CIRT</fullName>
        <active>true</active>
        <label>Progress Note (CIRT)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Attach_note_to_most_recent_program_plan</fullName>
        <active>true</active>
        <description>Must use the program plan with the Most Recent Program Plan flag at the time of note creation.</description>
        <errorConditionFormula>and(Program_Plan__r.Most_Recent_Program_Plan_Old__c = false, ISNEW())</errorConditionFormula>
        <errorMessage>You must attach this note to the most recent program plan.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannott_edit_incident_once_created</fullName>
        <active>true</active>
        <errorConditionFormula>and(ischanged( Incident_Participant__c ), not(isnew()))</errorConditionFormula>
        <errorDisplayField>Incident_Participant__c</errorDisplayField>
        <errorMessage>You cannot change the Incident Report that this note is related to. Contact IS for assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_can_not_be_in_the_future</fullName>
        <active>true</active>
        <description>Progress Note date can not be in the future</description>
        <errorConditionFormula>and(Date__c &gt; today(), DateValue(CreatedDate) &gt; Date(2014,3,25))</errorConditionFormula>
        <errorDisplayField>Activity_Id_Admin__c</errorDisplayField>
        <errorMessage>Date can not be in the future.</errorMessage>
    </validationRules>
</CustomObject>